<resources>
    <string name="app_name">리빙투게더</string>
    <string name="app_title">Living Together</string>
    <string name="notice_no_nok">등록된 보호자가 없습니다.\n보호자를 추가하여 비상 상황 발생 시\n지자체에서 연락을 시도할 수 있습니다.</string>
    <string name="allow">허용하기</string>
    <string name="do_finish">종료하기</string>
    <string name="notice_permission_must_be_granted">해당 권한을 허용하지 않으면 앱을 사용할 수 없습니다.</string>
    <string name="see_more">더 보기</string>

    <!-- Dialog-->
    <string name="dialog_button_delete">삭제</string>
    <string name="dialog_button_confirm">확인</string>
    <string name="dialog_button_add_next_of_kin_directly">직접 추가하기</string>
    <string name="dialog_button_add_next_of_kin_contact">연락처에서 추가하기</string>
    <string name="dialog_title_sensor_info">센서 정보</string>

    <!-- Toolbar-->
    <string name="toolbar_button_edit">편집</string>

    <!-- Contact-->
    <string name="contact">연락처</string>
    <string name="contact_name_ex">이름</string>
    <string name="contact_no_search_result">검색 결과가 없습니다.</string>
    <string name="contact_search_hint">검색</string>

    <!-- RegisterButton-->
    <string name="register_button">등록하기</string>

    <!-- BottomButton-->
    <string name="bottom_button_insert">추가하기</string>
    <string name="bottom_button_edit">수정하기</string>

    <!-- Notification-->
    <string name="notification_bluetooth_off">블루투스가 꺼져있어 센서를 감지할 수 없습니다.</string>

    <!-- Profile-->
    <string name="profile_setting">사용자 설정</string>
    <string name="profile_name">이름</string>
    <string name="profile_phone">전화번호</string>
    <string name="profile_address">주소</string>
    <string name="profile_search_address">주소 검색</string>
    <string name="profile_new_notice">최초 1회 사용자 등록이 필요합니다.</string>

    <!-- NextOfKin-->
    <string name="next_of_kin">보호자</string>
    <string name="next_of_kin_name">보호자 이름</string>
    <string name="next_of_kin_phone_ex">010–0000–0000</string>
    <string name="next_of_kin_phone">전화번호</string>
    <string name="next_of_kin_insert">보호자 추가</string>
    <string name="next_of_kin_no_registered">등록된 보호자가 없습니다.</string>
    <string name="next_of_kin_empty_message">이름과 전화번호를 모두 입력해주세요</string>

    <!-- Sensor-->
    <string name="sensor_registerd">등록된 센서</string>
    <string name="sensor_foot">발판 센서</string>
    <string name="sensor_location">위치</string>
    <string name="sensor_no_registered">등록된 센서가 없습니다.</string>
    <string name="sensor_register">센서 등록</string>
    <string name="sensor_finding">센서를 찾는 중입니다\n센서의 전원을 켜주세요</string>
    <string name="sensor_ask_location">센서가 어디에 설치되어 있나요?</string>
    <string name="sensor_location_example">화장실</string>
    <string name="sensor_find_success">센서를 찾았습니다</string>

    <!-- StatusBox-->
    <string name="status_box_no_sensor">등록된 센서가 없습니다.</string>
    <string name="status_box_on_going">센서를 정상적으로 감지하고 있습니다.</string>
    <string name="status_box_fail">알 수 없는 이유로\n기기를 감지할 수 없습니다.</string>
    <string name="status_box_bluetooth_off">블루투스가 꺼져있어\n센서를 감지할 수 없습니다.</string>
    <string name="status_box_number_of_sensor">개의 감지 중인 센서</string>
    <string name="status_box_connection_fail">기기와의 연결이 모두 끊어졌습니다.</string>

    <!-- ScanService-->
    <string name="registered_sensor">등록된 센서</string>
    <string name="toast_back_key_exit">뒤로 가기 버튼을 한 번 더 누르시면 종료됩니다.</string>
    <string name="ratio_roolbar_logo">1 : 0.482</string>
    <string name="sensor_last_detacted_time">n분 전</string>
    <string name="sensor_no_response">응답없음</string>
    <string name="statusbox_bluetooth_on_button">블루투스 켜기</string>
    <string name="scan_bluetooth_is_not_available">블루투스를 지원하지 않는 모델입니다</string>
    <string name="scan_duplicated_sensor">이미 등록된 센서입니다</string>
</resources>
